hphp/test/slow/namespace/dynamic_extra_slash.php.expectf

Fatal error: Class undefined: \\A\B in %s/test/slow/namespace/dynamic_extra_slash.php on line 10
